Prevent wrapping of edit button

--- a/AdminPageFieldEditLinks.css
+++ b/AdminPageFieldEditLinks.css
@@ -4,6 +4,7 @@
 
 .InputfieldPageEditButton {
 	margin-left: 1em;
+	white-space: nowrap;
 }
 
 .InputfieldPageListSelect .InputfieldPageEditButton {
